--- a/README.org
+++ b/README.org
@@ -6,4 +6,4 @@ Was feeling homesick for while stuck indoors avoiding COVID-19 on a rainy day. W
 
 ** Installing
 
-Move all ~.base~ files to your wpg templates folder and symlink appropriately. Move the other dots to where they live. Do the thing with wpg and ~wall.png~.
+Move all ~.base~ files to your wpg templates folder and symlink appropriately. Move the other dots to where they live. Do the thing with wpg and ~wall.png~. [[https://github.com/ccarlile/dotemacs][My emacs config]] if that's your thing.
